kustomize/celery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twito-celery
  labels:
    app: twito-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twito-celery
  template:
    metadata:
      labels:
        app: twito-celery
    spec:
      containers:
      - name: twito-celery
        image: twito
        command:
          - celery
          - -A
          - tasks
          - worker
          - --loglevel=INFO
      - name: twito-celery-beat
        image: twito
        command:
          - celery
          - -A
          - tasks
          - beat
          - --loglevel=INFO
        resources:
          requests:
            memory: 1Gi
            cpu: 100m
          limits:
            memory: 1Gi
            cpu: 500m
