kustomize/twito.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twito
  labels:
    app: twito
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twito
  template:
    metadata:
      labels:
        app: twito
    spec:
      containers:
      - name: twito
        image: twito
        command:
          - uwsgi
          - --http
          - 0.0.0.0:5000
          - --module
          - app:app
          - --enable-threads
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: 1Gi
            cpu: 500m
          limits:
            memory: 1Gi
            cpu: 500m
      - name: twito-frontend
        image: twito-frontend
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 1Gi
            cpu: 500m
          limits:
            memory: 1Gi
            cpu: 500m
