kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twito
spec:
  selector:
    app: twito
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: twito-frontend
spec:
  selector:
    app: twito
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
