kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twito-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - api.twito.djnd.si
    secretName: twito-tls
  rules:
  - host: api.twito.djnd.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twito
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twito-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - twito.djnd.si
    - twito.danesjenovdan.si
    secretName: twito-frontend-tls
  rules:
  - host: twito.djnd.si
    http: &http_paths
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: twito-frontend
            port:
              number: 80
  - host: twito.danesjenovdan.si
    http: *http_paths
